Added events and choices. Voting works.

--- a/README.rdoc
+++ b/README.rdoc
@@ -9,5 +9,5 @@ It is named after a ficticious portuguese movie critic portrayed by Herman José
 
 == License
 
- "THE BEER-WARE LICENSE" (Revision 42):
- Pedro Coelho <pedro.luis.coelho@gmail.com> wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.
+"THE BEER-WARE LICENSE" (Revision 42+1):
+Pedro Coelho <pedro.luis.coelho@gmail.com> wrote this program. As long as you retain this notice you can do whatever you want with this stuff. If you and him shall meet some day, and you think this stuff is worth it, you can buy him a beer in return.
